# graphqlient

./: .gitignore  .graphqlconfig  README.md  pyproject.toml  run_tests.sh
gqlient/: cli.py  generator.py  main.py  type_utils.py
gqlient/templates/: all_types.py.jinja2  base.py.jinja2  client.py.jinja2  common.py.jinja2  enum_types.py.jinja2  input_types.py.jinja2  mutation.py.jinja2  pyproject.toml.jinja2  query.py.jinja2  queryable_types.py.jinja2  result_types.py.jinja2
tests/: generate.py  main.py
tests/graphql-faker/: .graphqlconfig  schema.graphql
tests/jobs/: .graphqlconfig  conftest.py  schema.graphql  test_base.py  test_generator.py  test_mutations.py  test_queries.py
