[tool.poetry]
name = "graphqlient"
version = "0.0.1a2"
description = ":)"
authors = ["Vojtěch Dohnal <vojdoh@gmail.com>"]
packages = [
    { include = "gqlient" }
]

[tool.poetry.dependencies]
python = "^3.9"
gql = {extras = ["aiohttp", "requests"], version = "^3.4.0"}
Jinja2 = "^3.1.2"
inflection = "^0.5.1"
typer = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1.0", allow-prereleases = true}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -s"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

