[tool.poetry]
name = "graphqlient"
version = "0.0.1a"
description = ":)"
authors = ["Vojtěch Dohnal <vojdoh@gmail.com>"]
packages = [{ include = "gqlient" }]

[tool.poetry.dependencies]
python = "^3.9"
gql = { extras = ["aiohttp", "requests"], version = "^3.4.0" }
Jinja2 = "^3.1.2"
inflection = "^0.5.1"
typer = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[tool.poetry.group.dev.dependencies]
black = { version = "^23.1.0", allow-prereleases = true }
autoflake = "^2.0.1"
flake8-pyproject = "^1.2.2"
mypy = "^0.991"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -s"
testpaths = ["tests"]

[tool.flake8]
max-line-length = 120
count = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
